--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>My name is Catalina</p>
     <p>I like cats</p>
 
-    <img src="https://i.pinimg.com/564x/26/a9/c3/26a9c3276223c2445f92074b860ac567.jpg"/>
+    <img src="IMG_2870.jpeg
+"/>
 </body>
 </html>
