--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     </head>
     <link rel="stylesheet" href="style.css"/>
 </head>
+
 <body>
     <h1>Cat</h1>
-    <p>My name is Catalina</p>
-    <p>I like cats</p>
+    <p>My name is Catalina Flores and I am a sophomore at HCH.</p>
+    <p>This is my cat, Leeroy. According to the veterinarian, Leeroy is slightly obese. He is currently 7 years old.</p>
 
-    <img src="IMG_2870.jpeg
-"/>
+    <img src="leeroy.jpg"/>
+    
 </body>
 </html>
